syntax = "proto3";

package bst.v1;

option go_package = "github.com/tsuyoyo/bst-pj-proto/gen/go/bst/v1;bstv1";

message Area {
  string name          = 1;
  int32  prefecture_id = 2;  // 1~47
}
